// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`initializing base assessment > init action should init assessment data > init_assessment 1`] = `
{
  "config": {
    "availableAiProviders": [],
    "availableLocales": [],
    "features": {},
    "project": {
      "aiAssistedIdpFeatureEnabled": false,
      "enhanceWithAiEnabled": false,
      "idpEnabled": false,
    },
    "timezone": "",
  },
  "connection": {
    "connected": true,
  },
  "currentUser": null,
  "errors": {
    "errors": [],
  },
  "preview": {
    "activeDictationOnQuestion": 0,
    "agileAssetsUrl": undefined,
    "agileAssignUrl": undefined,
    "allPages": {
      Symbol(1): [
        {
          "blockId": 1,
          "questions": [
            1,
          ],
        },
        {
          "blockId": 1,
          "questions": [
            2,
          ],
        },
      ],
      Symbol(2): [
        {
          "blockId": 2,
          "questions": [
            3,
          ],
        },
      ],
    },
    "allowMultipleResponses": undefined,
    "answersSaved": false,
    "assessmentCategory": undefined,
    "assessmentTimedOut": false,
    "backButtonPressed": false,
    "blocks": {
      "1": {
        "id": 1,
        "name": "Block1",
        "position": 1,
        "props": {
          "buttons": {
            "next_button": "Next",
            "prev_button": "Previous",
          },
          "randomization": {
            "type": "No",
          },
        },
        "questions": [
          1,
          2,
        ],
        "save_as_template": false,
        "template_id": null,
      },
      "2": {
        "id": 2,
        "name": "Block2",
        "position": 2,
        "props": {
          "buttons": {
            "next_button": "Next",
            "prev_button": "Previous",
          },
          "randomization": {
            "type": "No",
          },
        },
        "questions": [
          3,
        ],
        "save_as_template": false,
        "template_id": null,
      },
    },
    "campaignFactorList": [],
    "campaignUser": undefined,
    "currentElement": null,
    "currentPage": 0,
    "dashboardUrl": "/",
    "dataSheet": undefined,
    "dataSheetColumns": undefined,
    "dbResult": {
      "id": 1,
      "seedrandom": 1,
    },
    "defaultNorm": undefined,
    "elements": [
      {
        "elements": [],
        "path": [
          0,
        ],
        "props": {
          "current": "2",
        },
        "type": "Block",
      },
      {
        "elements": [],
        "path": [
          1,
        ],
        "props": {
          "storage": [
            {
              "key": "test",
              "value": "1",
            },
          ],
        },
        "type": "EmbeddedData",
      },
      {
        "elements": [
          {
            "elements": [],
            "path": [
              3,
              0,
            ],
            "props": {
              "current": "1",
            },
            "type": "Block",
          },
          {
            "elements": [],
            "path": [
              3,
              1,
            ],
            "props": {
              "current": "2",
            },
            "type": "Block",
          },
        ],
        "path": [
          3,
        ],
        "props": {
          "number": 2,
        },
        "type": "Randomizer",
      },
    ],
    "embeddedData": {},
    "enableBack": false,
    "enableProgress": true,
    "enableSingleQuestionPage": undefined,
    "end": false,
    "errors": {},
    "evaluationSessionId": undefined,
    "expiryDate": undefined,
    "extraOptions": {},
    "factors": undefined,
    "fixedTimed": undefined,
    "hideHiddenQuestions": true,
    "highlights": {},
    "hrisData": {},
    "id": 1,
    "ignoreValidations": false,
    "inProgressQuestions": [],
    "initialized": true,
    "instructions": undefined,
    "invalidSession": false,
    "isAnonymousAssessment": undefined,
    "isAssessor": undefined,
    "isSimulation": false,
    "isThreesixty": undefined,
    "isTimedCampaign": undefined,
    "linear": false,
    "linkedQuestions": undefined,
    "locale": undefined,
    "locales": undefined,
    "mediaResponses": undefined,
    "mediaUrl": "/assigns/1",
    "metaData": {},
    "name": "test-assessment",
    "nextAssessmentUrl": undefined,
    "nextButtonPressed": false,
    "normRules": [],
    "normalizedTree": {
      "0": {
        "path": [
          0,
        ],
        "props": {
          "current": "2",
        },
        "type": "Block",
      },
      "1": {
        "path": [
          1,
        ],
        "props": {
          "storage": [
            {
              "key": "test",
              "value": "1",
            },
          ],
        },
        "type": "EmbeddedData",
      },
      "2": {
        "path": [
          3,
        ],
        "props": {
          "number": 2,
        },
        "type": "Randomizer",
      },
      "2/0": {
        "path": [
          3,
          0,
        ],
        "props": {
          "current": "1",
        },
        "type": "Block",
      },
      "2/1": {
        "path": [
          3,
          1,
        ],
        "props": {
          "current": "2",
        },
        "type": "Block",
      },
    },
    "options": {},
    "otherPendingAssessmentCount": undefined,
    "pipedTextMapping": {},
    "prevPages": [],
    "questions": {
      "1": {
        "block_id": 1,
        "display_logic": null,
        "id": 1,
        "name": "Q1",
        "position": 1,
        "props": {
          "choices": 2,
          "choicesTexts": [
            "Yes",
            "No",
          ],
          "defaultValues": [],
          "notApplicable": false,
          "notApplicableLabel": "Not Applicable",
          "position": "Vertical",
          "questionText": "Have you taken part in any extra-curricular activities in university?",
          "randomization": {
            "type": "No",
          },
          "type": "SingleAnswer",
        },
        "required_validation": {
          "enabled": false,
          "type": "Force",
        },
        "save_as_template": false,
        "skip_logic": [],
        "template_id": null,
        "type": "MultipleChoice",
        "validation": {
          "args": {},
          "type": "None",
        },
      },
      "2": {
        "block_id": 1,
        "display_logic": {
          "conditions": [
            {
              "conditions": [
                {
                  "answer": "0",
                  "conditionType": "Question",
                  "predicate": "Selected",
                  "prefix": "And",
                  "subject": 1,
                  "type": "bool",
                },
              ],
              "prefix": "And",
            },
          ],
        },
        "id": 2,
        "name": "Q3",
        "position": 2,
        "props": {
          "choices": 3,
          "choicesTexts": [
            "Click to write Choice 1",
            "Click to write Choice 2",
            "Click to write Choice 3",
          ],
          "defaultValues": [],
          "questionText": "Please specify",
          "randomization": {
            "type": "No",
          },
          "type": "DateEntry",
        },
        "required_validation": {
          "enabled": false,
          "type": "Force",
        },
        "save_as_template": false,
        "skip_logic": [],
        "template_id": null,
        "type": "TextEntry",
        "validation": {
          "args": {},
          "type": "None",
        },
      },
      "3": {
        "block_id": 2,
        "display_logic": null,
        "id": 3,
        "name": "Q2",
        "position": 1,
        "props": {
          "choices": 3,
          "choicesTexts": [
            "Click to write Choice 1",
            "Click to write Choice 2",
            "Click to write Choice 3",
          ],
          "defaultValues": [],
          "notApplicable": false,
          "notApplicableLabel": "Not Applicable",
          "position": "Vertical",
          "questionText": "Click to write the question text",
          "randomization": {
            "type": "No",
          },
          "type": "SingleAnswer",
        },
        "required_validation": {
          "enabled": false,
          "type": "Force",
        },
        "save_as_template": false,
        "skip_logic": [],
        "template_id": null,
        "type": "MultipleChoice",
        "validation": {
          "args": {},
          "type": "None",
        },
      },
    },
    "randomseed": "1",
    "readOnly": undefined,
    "relationship": undefined,
    "relationships": undefined,
    "results": {},
    "resultsUrl": "/assigns/1",
    "scoring": undefined,
    "showErrorWarning": false,
    "showQuestionScoring": undefined,
    "showScoringOnEndPage": undefined,
    "showSubmitPage": false,
    "started": false,
    "subjectDataSheet": undefined,
    "submitRequired": false,
    "timerDuration": undefined,
    "type": "preview_assessment",
  },
  "request": {
    "requests": [],
    "responseDataMismatchRequest": {
      "data": {},
      "errors": "",
      "requestName": "",
    },
  },
  "survey": {
    "builder": {
      "assessment": {
        "blocks": [],
        "category": "",
        "defaultLanguage": null,
        "default_norm_id": null,
        "disableMessage": null,
        "disableReason": null,
        "disabled": false,
        "factors": [],
        "flow": null,
        "id": null,
        "instructions": {},
        "linkedAssessment": null,
        "linkedQuestions": {},
        "loaded": false,
        "name": "",
        "norm_rules": [],
        "options": {},
        "ownerId": null,
        "propPanel": {
          "offset": null,
          "question": null,
        },
        "relationships": [],
        "saving": false,
        "trash": [],
      },
      "blockCenter": {
        "saving": false,
      },
      "blocks": {},
      "factors": {
        "current": null,
        "factors": {},
        "recoding": [],
      },
      "flow": {
        "elements": [],
      },
      "questionCenter": {
        "disabled": false,
        "loaded": false,
        "question": null,
        "saving": false,
      },
      "questions": {},
      "resources": {
        "assessmentQuestions": {},
        "assessments": [],
        "defaultAssessmen": null,
        "resources": [],
      },
    },
    "ui": {
      "hotSpot": {
        "shapeIndex": null,
      },
      "modals": {
        "current": [],
        "data": {},
      },
      "propertyPanel": {
        "firstBlockContentOffset": 0,
      },
      "socket": {
        "initialized": false,
      },
    },
  },
}
`;

exports[`initializing base assessment > middleware should call next if is not NEXT_PAGE > default_store 1`] = `
{
  "config": {
    "availableAiProviders": [],
    "availableLocales": [],
    "features": {},
    "project": {
      "aiAssistedIdpFeatureEnabled": false,
      "enhanceWithAiEnabled": false,
      "idpEnabled": false,
    },
    "timezone": "",
  },
  "connection": {
    "connected": true,
  },
  "currentUser": null,
  "errors": {
    "errors": [],
  },
  "preview": {
    "activeDictationOnQuestion": 0,
    "allPages": {},
    "answersSaved": false,
    "assessmentTimedOut": false,
    "backButtonPressed": false,
    "blocks": {},
    "currentElement": null,
    "currentPage": 0,
    "dashboardUrl": "/",
    "dataSheet": [],
    "dataSheetColumns": [],
    "elements": [],
    "embeddedData": {},
    "enableBack": false,
    "enableProgress": false,
    "enableSingleQuestionPage": false,
    "end": false,
    "errors": {},
    "evaluationSessionId": null,
    "expiryDate": null,
    "extraOptions": {},
    "factors": [],
    "fixedTimed": false,
    "hideHiddenQuestions": true,
    "highlights": {},
    "ignoreValidations": false,
    "inProgressQuestions": [],
    "initialized": false,
    "instructions": {
      "content": "",
      "enabled": false,
    },
    "invalidSession": false,
    "isAssessor": false,
    "isSimulation": false,
    "isThreesixty": false,
    "linear": false,
    "locales": null,
    "mediaResponses": [],
    "mediaUrl": null,
    "nextAssessmentUrl": null,
    "nextButtonPressed": false,
    "normalizedTree": {},
    "options": {},
    "otherPendingAssessmentCount": 0,
    "pipedTextMapping": {},
    "prevPages": [],
    "questions": {},
    "readOnly": false,
    "relationship": null,
    "relationships": [],
    "results": {},
    "scoring": null,
    "showErrorWarning": false,
    "showQuestionScoring": false,
    "showScoringOnEndPage": false,
    "showSubmitPage": false,
    "started": false,
    "subjectDataSheet": [],
    "submitRequired": false,
    "timerDuration": null,
    "type": "preview_assessment",
  },
  "request": {
    "requests": [],
    "responseDataMismatchRequest": {
      "data": {},
      "errors": "",
      "requestName": "",
    },
  },
  "survey": {
    "builder": {
      "assessment": {
        "blocks": [],
        "category": "",
        "defaultLanguage": null,
        "default_norm_id": null,
        "disableMessage": null,
        "disableReason": null,
        "disabled": false,
        "factors": [],
        "flow": null,
        "id": null,
        "instructions": {},
        "linkedAssessment": null,
        "linkedQuestions": {},
        "loaded": false,
        "name": "",
        "norm_rules": [],
        "options": {},
        "ownerId": null,
        "propPanel": {
          "offset": null,
          "question": null,
        },
        "relationships": [],
        "saving": false,
        "trash": [],
      },
      "blockCenter": {
        "saving": false,
      },
      "blocks": {},
      "factors": {
        "current": null,
        "factors": {},
        "recoding": [],
      },
      "flow": {
        "elements": [],
      },
      "questionCenter": {
        "disabled": false,
        "loaded": false,
        "question": null,
        "saving": false,
      },
      "questions": {},
      "resources": {
        "assessmentQuestions": {},
        "assessments": [],
        "defaultAssessmen": null,
        "resources": [],
      },
    },
    "ui": {
      "hotSpot": {
        "shapeIndex": null,
      },
      "modals": {
        "current": [],
        "data": {},
      },
      "propertyPanel": {
        "firstBlockContentOffset": 0,
      },
      "socket": {
        "initialized": false,
      },
    },
  },
}
`;
